--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -132,18 +132,8 @@
       </div>
     </mat-toolbar>
 
-    <div id="content-layout-parent" class="pure-g">
-      <div
-        id="content-layout-left"
-        class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"></div>
-      <div
-        id="content-layout-center"
-        class="pure-u-22-24 pure-u-md-20-24 pure-u-lg-18-24 pure-u-xl-10-24">
-        <router-outlet></router-outlet>
-      </div>
-      <div
-        id="content-layout-right"
-        class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"></div>
+    <div id="content-layout-center" style="padding: 50px">
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
