--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,10 @@ body {
   height: 36px;
 }
 
+.full-width {
+  width: 100%;
+}
+
 // intended to style a mat-icon used as a form field suffix
 // .password-visibility-indicator {
 //   color: mat.m2-get-color-from-palette($lorem-list-ui-primary, 500);
