--- a/src/app/domain/routes/lists-manage/lists-manage.component.html
+++ b/src/app/domain/routes/lists-manage/lists-manage.component.html
@@ -1,47 +1,57 @@
-<mat-card>
+<mat-card appearance="outlined">
   <div class="default-form-card-container">
     <mat-card-header class="default-card-header">
       <mat-card-title>Manage Lists</mat-card-title>
       <p></p>
     </mat-card-header>
     <mat-card-content style="border: 1px">
-      <mat-drawer-container class="list-manage-drawer-container">
+      <mat-drawer-container
+        style="background-color: inherit"
+        class="list-manage-drawer-container">
         <mat-drawer
           mode="over"
           position="end"
           class="table-update-drawer"
-          [opened]="isListBeingEdited || isListBeingAdded"
+          [opened]="isListBeingEdited || isListBeingCreated"
           disableClose="true">
           <section>
             <form
-              #formDirective="ngForm"
-              [formGroup]="editListForm"
-              (ngSubmit)="onCreateEditListSubmit()">
-              <header class="table-update__header">
+              #formInstanceListManage="ngForm"
+              [formGroup]="formListManage"
+              (ngSubmit)="
+                onCreateEditListSubmit(formInstanceListManage, $event)
+              ">
+              <header>
                 <h2 class="h3">
-                  {{ isListBeingAdded ? 'Create' : 'Edit' }} List
+                  {{ isListBeingCreated ? 'Create' : 'Edit' }} List
                 </h2>
               </header>
 
-              <div class="table-update__fields">
-                <div class="row">
-                  <div class="col-6">
+              <div>
+                <div>
+                  <div>
                     <mat-form-field class="full-width">
                       <input
+                        #nameInput
                         matInput
                         placeholder="Name"
-                        formControlName="name" />
-                      @if (editListForm.controls['name'].hasError('required')) {
+                        formControlName="name"
+                        class="full-width" />
+                      @if (
+                        formListManage.controls['name'].hasError('required')
+                      ) {
                         <mat-error>List name is required.</mat-error>
                       }
                       @if (
-                        editListForm.controls['name'].hasError('maxlength')
+                        formListManage.controls['name'].hasError('maxlength')
                       ) {
                         <mat-error>
                           List name must have no more than 64 characters.
                         </mat-error>
                       }
-                      @if (editListForm.controls['name'].hasError('pattern')) {
+                      @if (
+                        formListManage.controls['name'].hasError('pattern')
+                      ) {
                         <mat-error>
                           List name must not consist only of whitespace
                           characters.
@@ -49,15 +59,16 @@
                       }
                     </mat-form-field>
                   </div>
-                  <div class="col-6 full-width">
+                  <div class="full-width">
                     <mat-form-field class="full-width">
                       <textarea
                         matInput
+                        formControlName="description"
                         placeholder="Description"
-                        formControlName="description">
+                        rows="5">
                       </textarea>
                       @if (
-                        editListForm.controls['description'].hasError(
+                        formListManage.controls['description'].hasError(
                           'maxlength'
                         )
                       ) {
@@ -67,7 +78,9 @@
                         </mat-error>
                       }
                       @if (
-                        editListForm.controls['description'].hasError('pattern')
+                        formListManage.controls['description'].hasError(
+                          'pattern'
+                        )
                       ) {
                         <mat-error>
                           List description must not consist only of whitespace
@@ -81,45 +94,50 @@
 
               <footer>
                 <div
-                  style="
-                    display: flex;
-                    align-items: center;
-                    justify-content: left;
-                  ">
-                  <div>
+                  class="footer-button-container"
+                  [ngClass]="{ isSmallerView: isSmallerView }">
+                  <button
+                    mat-raised-button
+                    class="button"
+                    type="button"
+                    (click)="onDismiss(formInstanceListManage)">
+                    Dismiss
+                  </button>
+                  <button
+                    id="save"
+                    mat-raised-button
+                    class="button"
+                    type="submit">
+                    Save
+                  </button>
+                  @if (isListBeingCreated) {
                     <button
+                      id="saveAndCreateAnother"
                       mat-raised-button
                       class="button"
-                      type="button"
-                      (click)="onDismiss(formDirective)">
-                      Dismiss
+                      type="submit">
+                      Save and Create Another
                     </button>
-                  </div>
-                  <div class="col-12 col-sm-6">
-                    <!-- [disabled]="!editListForm.valid" -->
-                    <button mat-raised-button class="button" type="submit">
-                      Save
-                    </button>
-                    <!-- [disabled]="!table_update_form.valid" -->
-                  </div>
+                  }
                 </div>
               </footer>
             </form>
           </section>
         </mat-drawer>
 
-        <mat-drawer-content>
+        <mat-drawer-content style="background-color: inherit">
           <div
             style="
               display: flex;
               align-items: center;
               justify-content: space-between;
               padding-right: 5px;
+              background-color: inherit;
             ">
             <div>
               <!-- class="default-small-button action-button-left" -->
               <button
-                mat-raised-button
+                mat-button
                 matTooltip="Create a List"
                 matTooltipPosition="below"
                 color="primary"
@@ -130,17 +148,18 @@
               </button>
               <!-- class="default-small-button action-button-right" -->
               <button
-                mat-raised-button
+                mat-button
                 matTooltip="Delete all of your Lists"
                 matTooltipPosition="below"
                 color="primary"
                 aria-label="Delete all of Your Lists"
-                (click)="noOp()">
+                (click)="onDeleteAllLists()">
                 Delete All
                 <!-- <i class="material-symbols-rounded">delete_sweep</i> -->
               </button>
             </div>
             <mat-paginator
+              style="background-color: inherit"
               #paginator
               [length]="dataSource.data.length"
               [pageIndex]="0"
@@ -185,7 +204,7 @@
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let row">
+              <td mat-cell *matCellDef="let row" class="min-width-200px">
                 <button
                   mat-button
                   matTooltip="Edit"
@@ -213,7 +232,7 @@
                   color="primary"
                   class="default-small-button"
                   aria-label="Add/Remove Items"
-                  (click)="noOp()">
+                  (click)="onManageListContent()">
                   <i class="material-symbols-rounded">settings</i>
                 </button>
                 <button
