refactor dialog-confirmation.component.html (wip)

--- a/src/app/core/shared/components/dialog-confirm/dialog-confirmation.component.html
+++ b/src/app/core/shared/components/dialog-confirm/dialog-confirmation.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div mat-dialog-content>
-  <p>{{ data.message }}</p>
+  <p style="white-space: pre-line">{{ data.message }}</p>
 </div>
 
 <div mat-dialog-actions [align]="'end'">
