--- a/src/style/theme/m3-theme.scss
+++ b/src/style/theme/m3-theme.scss
@@ -142,9 +142,11 @@ $light-theme: mat.define-theme(
       primary: $_primary,
       tertiary: $_tertiary,
       use-system-variables: true,
+      system-variables-prefix: sys,
     ),
     typography: (
       use-system-variables: true,
+      system-variables-prefix: sys,
     ),
   )
 );
@@ -156,9 +158,11 @@ $dark-theme: mat.define-theme(
       primary: $_primary,
       tertiary: $_tertiary,
       use-system-variables: true,
+      system-variables-prefix: sys,
     ),
     typography: (
       use-system-variables: true,
+      system-variables-prefix: sys,
     ),
   )
 );
