--- a/src/app/domain/routes/lists-manage/lists-manage.component.scss
+++ b/src/app/domain/routes/lists-manage/lists-manage.component.scss
@@ -6,12 +6,8 @@
   min-width: 200px;
 }
 
-// .default-form-card-container {
-//   margin: 5px;
-// }
-
 .mat-drawer-content {
-  min-height: 400px;
+  min-height: 550px;
   background-color: inherit;
 }
 
@@ -46,7 +42,9 @@
 
 @media (max-width: 1260px) {
   .mat-mdc-table[matTableResponsive] .mat-mdc-header-row {
-    display: flex;
+    display: none;
+    // background-color: red;
+    // display: flex;
     flex-wrap: wrap;
     position: sticky;
     top: 0;
@@ -119,10 +117,31 @@
   margin-right: 20px;
 }
 
+.list-management-table-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: inherit;
+}
+
+.list-management-table-header.isSmallerView {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.list-management-table-filter.isSmallerView {
+  width: 100%;
+}
+
 .footer-button-container.isSmallerView {
-  display: flex; /* Enable Flexbox */
-  flex-direction: column; /* Align items in a column */
-  align-items: left; /* Center buttons horizontally */
-  // gap: 10px; /* Space between buttons */
-  // padding: 20px; /* Add padding around the container */
+  padding: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  gap: 6px;
+}
+
+.footer-button {
+  margin-right: 6px;
 }
